Remove redundant styles for nav li on focus. Fix new icon misalignment on archive

--- a/app/assets/stylesheets/_mediaQueries.scss
+++ b/app/assets/stylesheets/_mediaQueries.scss
@@ -246,4 +246,7 @@
 	h1 {
 		font-size: 1.5rem;
 	}
+	.img_container {
+		transform: translate(0%, -12%);
+	}
 }
